force-app/main/default/src/objects/PJN_Prior_Authorization__c/PJN_Prior_Authorization__c.object-meta.xml
<CustomObject>
    <description>Custom object to track prior authorizations related to member plans.</description>
    <label>Prior Authorization</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Prior Authorization Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prior Authorizations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>