force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Active__c.field-meta.xml
<CustomField>
    <fullName>PJN_Active__c</fullName>
    <description>Indicates whether the Prior Authorization is currently Active</description>
    <formula>TODAY() &gt;= PJN_Effective_Date__c &amp;&amp;
TODAY() &lt;= PJN_Expiration_Date__c &amp;&amp;
ISPICKVAL( PJN_Outcome__c, &apos;Approved&apos;)</formula>
    <inlineHelpText>Indicates whether the Prior Authorization is currently Active</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>