force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>PJN_Authorization_Number__c</fullName>
    <description>Authorization number for prior authorization.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Authorization Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>