force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Care_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Care_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Care plan the parent member plan belongs to.</description>
    <label>Care Plan</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Prior Authorizations</relationshipLabel>
    <relationshipName>PJN_Prior_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>