force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Coverage_Investigation__c.field-meta.xml
<CustomField>
    <fullName>PJN_Coverage_Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Coverage Investigation which the Prior Authorization is related to.</description>
    <label>Coverage Investigation</label>
    <referenceTo>PJN_Coverage_Investigation__c</referenceTo>
    <relationshipLabel>Prior Authorizations</relationshipLabel>
    <relationshipName>Prior_Authorizations</relationshipName>
    <type>Lookup</type>
</CustomField>