force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Decision_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Decision_Date__c</fullName>
    <description>Date the prior authorization decision was made.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Decision Date</label>
    <type>Date</type>
</CustomField>