force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Denial_Reason__c.field-meta.xml
<CustomField>
    <fullName>PJN_Denial_Reason__c</fullName>
    <description>Reason(s) prior authorization was denied.</description>
    <label>Denial Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Lab Results</fullName>
            </value>
            <value>
                <fullName>Letter of Medical Necessity</fullName>
            </value>
            <value>
                <fullName>Missing Information</fullName>
            </value>
            <value>
                <fullName>New to Market</fullName>
            </value>
            <value>
                <fullName>Radiographic Evidence</fullName>
            </value>
            <value>
                <fullName>Specialist Rx</fullName>
            </value>
            <value>
                <fullName>Step Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>