force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Effective_Date__c</fullName>
    <description>Date the prior authorization goes into effect.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>