force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Expected_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expected_Response_Time__c</fullName>
    <description>Expected response time (days) for a prior authorization decision to be made.</description>
    <inlineHelpText>Expected number of days to receive a response.</inlineHelpText>
    <label>Expected Response Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>