force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Expiration_Date__c</fullName>
    <description>Date the prior authorization expires.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>