force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Member_Plan__c.field-meta.xml
<CustomField>
    <fullName>PJN_Member_Plan__c</fullName>
    <description>Master detail relationship with Member Plan.</description>
    <label>Member Plan</label>
    <referenceTo>PJN_Member_Plan__c</referenceTo>
    <relationshipLabel>Prior Authorizations</relationshipLabel>
    <relationshipName>PJN_Prior_Authorizations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>