force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PJN_Outcome__c</fullName>
    <description>Prior authorization outcome.</description>
    <label>Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>