force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Status_Outcome__c.field-meta.xml
<CustomField>
    <fullName>PJN_Status_Outcome__c</fullName>
    <description>Displays the Status &amp; Outcome of the Prior Authorization. Used in related lists.</description>
    <formula>TEXT( PJN_Status__c )
&amp;
IF( ISPICKVAL( PJN_Status__c, &apos;&apos; ) || ISPICKVAL( PJN_Outcome__c, &apos;&apos; ),
    &apos;&apos;,
    &apos; - &apos;
)
&amp;
TEXT( PJN_Outcome__c )</formula>
    <label>Status / Outcome</label>
    <type>Text</type>
</CustomField>