force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>PJN_Submitted_Date__c</fullName>
    <description>Prior authorization submission date.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>