force-app/main/default/src/objects/PJN_Prior_Authorization__c/fields/PJN_Type__c.field-meta.xml
<CustomField>
    <fullName>PJN_Type__c</fullName>
    <description>Type of prior authorization.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Appeal - 1st Level</fullName>
            </value>
            <value>
                <fullName>Appeal - 2nd Level</fullName>
            </value>
            <value>
                <fullName>Appeal - 3rd Level</fullName>
            </value>
            <value>
                <fullName>Appeal - Peer-to-Peer</fullName>
            </value>
            <value>
                <fullName>Appeal - External Review</fullName>
            </value>
            <value>
                <fullName>Appeal - Formal Grievance</fullName>
            </value>
            <value>
                <fullName>Reauthorization</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
                <isActive>false</isActive>
                <label>Appeal</label>
            </value>
            <value>
                <fullName>External Review</fullName>
                <isActive>false</isActive>
                <label>External Review</label>
            </value>
            <value>
                <fullName>Formal Grievance</fullName>
                <isActive>false</isActive>
                <label>Formal Grievance</label>
            </value>
            <value>
                <fullName>Peer-to-Peer</fullName>
                <isActive>false</isActive>
                <label>Peer-to-Peer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>